# programming-for-life-sciences

./: .gitignore  README.md
aligner/: P0DTC5.fasta  README.md  experiments.ipynb  explorations.ipynb  main.py  prot_align.py  pyproject.toml  report.html  report.md  rosalind_lcsm.txt  setup.py  utilities.py
aligner/aligner/: __init__.py  __main__.py  aligner.py  matrix_manipulation.py  utilities.py
aligner/data/: P59596.fasta
aligner/doc/: aligner.html  index.html  search.js
aligner/doc/aligner/: __main__.html  aligner.html  matrix_manipulation.html  utilities.html
aligner/src/aligner/: main.py  prot_align.py  utilities.py
aligner/tests/: P59632.fasta  test_aligner.py  test_utilities.py
assignment_1/prime/: prime.py
assignment_1/prime/rust_version/src/: main.rs
assignment_2/prime_2/: prime_2.py
assignment_3/cholesterol/: cholesterol.ipynb  cholesterol.py
