[tool.poetry]
name = "aligner"
version = "0.1.2"
description = "A project for the course Programming for Life Sciences comprising a protein sequence aligner with visualisation tools to study methods for uncovering structures that with other methods might be left unresolved."
authors = ["Koen Westendorp <koensswestendorp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pylint = "^2.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
